--- a/templates/ui_templates/start_page.html
+++ b/templates/ui_templates/start_page.html
@@ -26,7 +26,7 @@
                 rows="6" 
                 required
                 placeholder="Describe what you want your song to be about. Include emotions, themes, story elements, or any specific ideas you want to capture..."
-                class="w-full px-5 py-4 bg-white/5 border border-white/10 rounded-xl text-white placeholder-gray-500 focus:outline-none input-glow transition resize-none"
+                class="w-full px-5 py-4 bg-gray-900/50 border border-white/10 rounded-xl text-white placeholder-gray-500 focus:outline-none input-glow transition resize-none"
             ></textarea>
         </div>
 
